Opened 12 years ago
Closed 12 years ago
#5755 closed bug (fixed)
Locale crash when removing English
Reported by: | Karvjorm | Owned by: | zooey |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Locale Kit | Version: | R1/alpha1 |
Keywords: | Locale crash libbe Invalid Argument | Cc: | Karvjorm |
Blocked By: | Blocking: | ||
Platform: | All |
Description
I have encountered this previously, but could not reproduce it then. But now in revision 36336 it is reproducible.
I opened Locale to set Finnish language. I picked Finnish with a mouse button and drag it to the Preferred language window and dropped it.
Then I picked English from the Preferred language window and tried to drag it to the window on the left. But then Locale crashed and the Debug window announced:
Debug of Team 527: Locale
[tcsetpgrp failed in terminal_inferior: Invalid Argument]
...
Switching to team /boot/system/preferences/Locale (353) thread w>Locale (358) 0x18948fa3 in ??
backtrace
#0 0x18048fa3 in ?? #1 0xe0004527 in ?? #2 0x0020a9e9 in LanguageListItem::~LanguageListItem () #3 0x003241b2 in BOutlineListView::_RemoveItem () from /boot/system/lib/libbe.so #4 0x003242c5 in BOutlineListView::RemoveItem () from /boot/system/lib/libbe.so #5 0x0020afa5 in LanguageListView::MoveItemFrom () #6 0x0020b2e4 in LanguageListView::MessageReceived () #7 0x002c5431 in BLooper::DispatchMessage () from /boot/system/lib/libbe.so #8 0x0037ea32 in BWindow::DispatchMessage () from /boot/system/lib/libbe.so #9 0x0037a359 in BWindow::task_looper () from /boot/system/lib/libbe.so #10 0x002c6c42 in BLooper::_task0_ () from /boot/system/lib/libbe.so #11 0x01326e6c in thread_entry () from /boot/system/lib/libroot.so #12 0x7003ffex in ??
Change History (2)
comment:1 by , 12 years ago
Owner: | changed from | to
---|---|
Status: | new → in-progress |
comment:2 by , 12 years ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
Fixed in hrev36487.