Fix #5755: Locale preflet crashing when dragging languages around * The flag bitmaps being part of list items were not treated properly in   the language item's copy constructor (the bitmap pointer was copied, not   the bitmap object itself). As a result, bitmap objects were freed more than   once. * some cleanup

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@36487 a95241bf-73f2-0310-859d-f6bbb57e9c96